# activation-guardrails

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/main/: main.yaml  refusal.yaml  refusal_large_train.yaml  refusal_wildjailbreak.yaml
configs/mvp/: mvp.yaml
docs/: CLUSTER.md  CURRENT_STATE.md  PROJECT_CONTEXT.md  RESEARCH_WORKFLOW.md  WORKING_CONVENTIONS.md
results/: mvp_results.csv  mvp_results.metadata.json
results/main/: results_table.csv  results_table.metadata.json
results/metrics/: probe_metrics.json  text_baseline_metrics.json
results/refusal/: results_table.csv  results_table.metadata.json  results_table_large_train.csv  results_table_large_train.metadata.json
scripts/: download_wildjailbreak.py
scripts/cluster/: run_cipher_transfer_pipeline.sh  run_main_pipeline.sh  run_mvp_pipeline.sh  run_probe_training.sh  run_refusal_pipeline.sh  run_sae_encoding.sh  run_sae_pipeline.sh  run_transfer_eval.sh  submit_cipher_transfer_job.sh  submit_main_job.sh  submit_mvp_job.sh  submit_probe_training_job.sh  submit_refusal_job.sh  submit_sae_encoding_job.sh  submit_sae_job.sh  submit_transfer_eval_job.sh  submit_wildjailbreak_c1.sh
scripts/main/: build_cipher_dataset.py  build_dataset.py  build_refusal_dataset.py  (+17 more)
tests/: conftest.py  test_baselines.py  test_ciphers.py  test_cluster_scripts.py  test_data.py  test_download_wildjailbreak.py  test_eval.py  test_features.py  test_generation.py  test_io.py  test_judge.py  test_latent_guard.py  test_main_scripts.py  test_probes.py  test_results_table.py  test_sae.py  test_utils.py
(+69 files in other folders)
